2008-04-23  Rob McMullen  <robm@users.sourceforge.net>

	* Released peppy-0.7.3.2 update to "Zeta Function"
	* changed search and replace to Emacs style
	* added scintilla regular expression search/replace
	* added shell wildcard search/replace
	* added help display for minibuffers, and a help item in the menu bar
	* added repeat action to minibuffer actions (you can now search again
	using the same keystroke that triggered the first search)
	* actions can now assert they have the focus before operating (which
	then allows global actions regardless of what has focus)
	* added hooks into HSI mode to change initial viewing parameters
	* added url query string and fragment support to mem filesystem
	* fixed OSX problems (double Help menu, mac style modifier keys in menu)
	* workaround for scintilla autoindenting bug on last line of file

2008-04-07  Rob McMullen  <robm@users.sourceforge.net>

	* Released peppy-0.7.3.1 update to "Zeta Function"
	* changed plugins' attemptOpen method to return exact and generic major
	mode matches
	* fixed error in plugins when loading files with unknown extension
	* updated GDAL support to GDAL 1.5 for hyperspectral images
	* fall back to GDAL when can't memory map an image in ENVI mode
	* moved plugins having non-core functionality to googlecode repository

2008-04-02  Rob McMullen  <robm@users.sourceforge.net>

	* Released peppy-0.7.3 "Zeta Function"
	* created new autoindent architecture
	* added regex autoindenter based on KDE's Kate regex syntax
	* added beginnings of C-style autoindenter based on Scintilla's folding
	* much improved recognition of function names for C, C++, Java
	* fixed problem in python autoindenter's handling of comments
	* multiple untitled files can now be opened
	* reorganized source code to provide examples of setuptools plugins
	* added utility to select all text between matching braces
	* added backslashify and unbackslashify commands